update placeholder registration