@@ -12,6 +12,7 @@ import com.gregtechceu.gtceu.api.misc.virtualregistry.EntryTypes;
 import com.gregtechceu.gtceu.api.misc.virtualregistry.VirtualEnderRegistry;
 import com.gregtechceu.gtceu.api.placeholder.*;
 import com.gregtechceu.gtceu.api.placeholder.exceptions.*;
+import com.gregtechceu.gtceu.api.registry.GTRegistries;
 import com.gregtechceu.gtceu.client.renderer.placeholder.ModulePlaceholderRenderer;
 import com.gregtechceu.gtceu.client.renderer.placeholder.QuadPlaceholderRenderer;
 import com.gregtechceu.gtceu.client.renderer.placeholder.RectPlaceholderRenderer;
@@ -61,6 +62,8 @@ import org.jetbrains.annotations.Nullable;
 
 import java.util.*;
 
+import static com.gregtechceu.gtceu.common.registry.GTRegistration.REGISTRATE;
+
 public class GTPlaceholders {
 
     public static int countItems(String id, @Nullable IItemHandler itemHandler) {
@@ -99,7 +102,7 @@ public class GTPlaceholders {
 
     public static void init() {
         RegistrateDistExecutor.unsafeRunWhenOn(Dist.CLIENT, () -> GTPlaceholders::initRenderers);
-        PlaceholderHandler.addPlaceholder(new Placeholder("energy") {
+        REGISTRATE.generic("energy", GTRegistries.Keys.PLACEHOLDER, () -> new Placeholder("energy") {
 
             @Override
             public MultiLineComponent apply(PlaceholderContext ctx,
@@ -118,7 +121,7 @@ public class GTPlaceholders {
                 return true;
             }
         });
-        PlaceholderHandler.addPlaceholder(new Placeholder("energyCapacity") {
+        REGISTRATE.generic("energyCapacity", GTRegistries.Keys.PLACEHOLDER, () -> new Placeholder("energyCapacity") {
 
             @Override
             public MultiLineComponent apply(PlaceholderContext ctx,
@@ -136,7 +139,7 @@ public class GTPlaceholders {
                 return true;
             }
         });
-        PlaceholderHandler.addPlaceholder(new Placeholder("calc") {
+        REGISTRATE.generic("calc", GTRegistries.Keys.PLACEHOLDER, () -> new Placeholder("calc") {
 
             @Override
             public MultiLineComponent apply(PlaceholderContext ctx,
@@ -153,7 +156,7 @@ public class GTPlaceholders {
                 return true;
             }
         });
-        PlaceholderHandler.addPlaceholder(new Placeholder("itemCount") {
+        REGISTRATE.generic("itemCount", GTRegistries.Keys.PLACEHOLDER, () -> new Placeholder("itemCount") {
 
             @Override
             public MultiLineComponent apply(PlaceholderContext ctx,
@@ -187,7 +190,7 @@ public class GTPlaceholders {
                 return true;
             }
         });
-        PlaceholderHandler.addPlaceholder(new Placeholder("fluidCount") {
+        REGISTRATE.generic("fluidCount", GTRegistries.Keys.PLACEHOLDER, () -> new Placeholder("fluidCount") {
 
             @Override
             public MultiLineComponent apply(PlaceholderContext ctx,
@@ -207,7 +210,7 @@ public class GTPlaceholders {
                 return true;
             }
         });
-        PlaceholderHandler.addPlaceholder(new Placeholder("if") {
+        REGISTRATE.generic("if", GTRegistries.Keys.PLACEHOLDER, () -> new Placeholder("if") {
 
             @Override
             public MultiLineComponent apply(PlaceholderContext ctx,
@@ -231,7 +234,7 @@ public class GTPlaceholders {
                 return true;
             }
         });
-        PlaceholderHandler.addPlaceholder(new Placeholder("color") {
+        REGISTRATE.generic("color", GTRegistries.Keys.PLACEHOLDER, () -> new Placeholder("color") {
 
             @Override
             public MultiLineComponent apply(PlaceholderContext ctx,
@@ -242,7 +245,7 @@ public class GTPlaceholders {
                 return new MultiLineComponent(args.get(1).stream().map(c -> c.withStyle(color)).toList());
             }
         });
-        PlaceholderHandler.addPlaceholder(new Placeholder("underline") {
+        REGISTRATE.generic("underline", GTRegistries.Keys.PLACEHOLDER, () -> new Placeholder("underline") {
 
             @Override
             public MultiLineComponent apply(PlaceholderContext ctx,
@@ -252,7 +255,7 @@ public class GTPlaceholders {
                         args.getFirst().stream().map(c -> c.withStyle(ChatFormatting.UNDERLINE)).toList());
             }
         });
-        PlaceholderHandler.addPlaceholder(new Placeholder("strike") {
+        REGISTRATE.generic("strike", GTRegistries.Keys.PLACEHOLDER, () -> new Placeholder("strike") {
 
             @Override
             public MultiLineComponent apply(PlaceholderContext ctx,
@@ -262,7 +265,7 @@ public class GTPlaceholders {
                         args.getFirst().stream().map(c -> c.withStyle(ChatFormatting.STRIKETHROUGH)).toList());
             }
         });
-        PlaceholderHandler.addPlaceholder(new Placeholder("obf") {
+        REGISTRATE.generic("obf", GTRegistries.Keys.PLACEHOLDER, () -> new Placeholder("obf") {
 
             @Override
             public MultiLineComponent apply(PlaceholderContext ctx,
@@ -272,7 +275,7 @@ public class GTPlaceholders {
                         args.getFirst().stream().map(c -> c.withStyle(ChatFormatting.OBFUSCATED)).toList());
             }
         });
-        PlaceholderHandler.addPlaceholder(new Placeholder("random") {
+        REGISTRATE.generic("random", GTRegistries.Keys.PLACEHOLDER, () -> new Placeholder("random") {
 
             @Override
             public MultiLineComponent apply(PlaceholderContext ctx,
@@ -282,13 +285,13 @@ public class GTPlaceholders {
                         PlaceholderUtils.toInt(args.getFirst()), PlaceholderUtils.toInt(args.get(1))));
             }
         });
-        PlaceholderHandler.addPlaceholder(new Placeholder("repeat") {
+        REGISTRATE.generic("repeat", GTRegistries.Keys.PLACEHOLDER, () -> new Placeholder("repeat") {
 
             @Override
             public MultiLineComponent apply(PlaceholderContext ctx,
                                             List<MultiLineComponent> args) throws PlaceholderException {
                 PlaceholderUtils.checkArgs(args, 1, true);
-                int count = PlaceholderUtils.toInt(args.get(0));
+                int count = PlaceholderUtils.toInt(args.getFirst());
                 PlaceholderUtils.checkRange("n", 0, 50000, count);
                 MultiLineComponent arg = MultiLineComponent.empty();
                 for (int i = 1; i < args.size(); i++) {
@@ -305,7 +308,7 @@ public class GTPlaceholders {
                 return true;
             }
         });
-        PlaceholderHandler.addPlaceholder(new Placeholder("block") {
+        REGISTRATE.generic("block", GTRegistries.Keys.PLACEHOLDER, () -> new Placeholder("block") {
 
             @Override
             public MultiLineComponent apply(PlaceholderContext ctx,
@@ -319,7 +322,7 @@ public class GTPlaceholders {
                 return true;
             }
         });
-        PlaceholderHandler.addPlaceholder(new Placeholder("tick") {
+        REGISTRATE.generic("tick", GTRegistries.Keys.PLACEHOLDER, () -> new Placeholder("tick") {
 
             @Override
             public MultiLineComponent apply(PlaceholderContext ctx,
@@ -333,13 +336,13 @@ public class GTPlaceholders {
                 return true;
             }
         });
-        PlaceholderHandler.addPlaceholder(new Placeholder("select") {
+        REGISTRATE.generic("select", GTRegistries.Keys.PLACEHOLDER, () -> new Placeholder("select") {
 
             @Override
             public MultiLineComponent apply(PlaceholderContext ctx,
                                             List<MultiLineComponent> args) throws PlaceholderException {
                 PlaceholderUtils.checkArgs(args, 1, true);
-                int i = PlaceholderUtils.toInt(args.get(0));
+                int i = PlaceholderUtils.toInt(args.getFirst());
                 PlaceholderUtils.checkArgs(args, i + 1, true);
                 return new MultiLineComponent(args.get(i + 1)).setIgnoreSpaces(true);
             }
@@ -351,7 +354,7 @@ public class GTPlaceholders {
         });
 
         if (!GTCEu.Mods.isCreateLoaded() || !ConfigHolder.INSTANCE.compat.createCompat) {
-            PlaceholderHandler.addPlaceholder(new Placeholder("redstone") {
+            REGISTRATE.generic("redstone", GTRegistries.Keys.PLACEHOLDER, () -> new Placeholder("redstone") {
 
                 @Override
                 public MultiLineComponent apply(PlaceholderContext ctx,
@@ -375,7 +378,7 @@ public class GTPlaceholders {
             });
 
         }
-        PlaceholderHandler.addPlaceholder(new Placeholder("previousText") {
+        REGISTRATE.generic("previousText", GTRegistries.Keys.PLACEHOLDER, () -> new Placeholder("previousText") {
 
             @Override
             public MultiLineComponent apply(PlaceholderContext ctx,
@@ -392,7 +395,7 @@ public class GTPlaceholders {
                 return true;
             }
         });
-        PlaceholderHandler.addPlaceholder(new Placeholder("progress") {
+        REGISTRATE.generic("progress", GTRegistries.Keys.PLACEHOLDER, () -> new Placeholder("progress") {
 
             @Override
             public MultiLineComponent apply(PlaceholderContext ctx,
@@ -410,7 +413,7 @@ public class GTPlaceholders {
                 return true;
             }
         });
-        PlaceholderHandler.addPlaceholder(new Placeholder("maxProgress") {
+        REGISTRATE.generic("maxProgress", GTRegistries.Keys.PLACEHOLDER, () -> new Placeholder("maxProgress") {
 
             @Override
             public MultiLineComponent apply(PlaceholderContext ctx,
@@ -428,7 +431,7 @@ public class GTPlaceholders {
                 return true;
             }
         });
-        PlaceholderHandler.addPlaceholder(new Placeholder("maintenance") {
+        REGISTRATE.generic("maintenance", GTRegistries.Keys.PLACEHOLDER, () -> new Placeholder("maintenance") {
 
             @Override
             public MultiLineComponent apply(PlaceholderContext ctx,
@@ -446,7 +449,7 @@ public class GTPlaceholders {
                 return true;
             }
         });
-        PlaceholderHandler.addPlaceholder(new Placeholder("active") {
+        REGISTRATE.generic("active", GTRegistries.Keys.PLACEHOLDER, () -> new Placeholder("active") {
 
             @Override
             public MultiLineComponent apply(PlaceholderContext ctx,
@@ -464,7 +467,7 @@ public class GTPlaceholders {
                 return true;
             }
         });
-        PlaceholderHandler.addPlaceholder(new Placeholder("voltage") {
+        REGISTRATE.generic("voltage", GTRegistries.Keys.PLACEHOLDER, () -> new Placeholder("voltage") {
 
             @Override
             public MultiLineComponent apply(PlaceholderContext ctx,
@@ -482,7 +485,7 @@ public class GTPlaceholders {
                 return true;
             }
         });
-        PlaceholderHandler.addPlaceholder(new Placeholder("amperage") {
+        REGISTRATE.generic("amperage", GTRegistries.Keys.PLACEHOLDER, () -> new Placeholder("amperage") {
 
             @Override
             public MultiLineComponent apply(PlaceholderContext ctx,
@@ -500,7 +503,7 @@ public class GTPlaceholders {
                 return true;
             }
         });
-        PlaceholderHandler.addPlaceholder(new Placeholder("count") {
+        REGISTRATE.generic("count", GTRegistries.Keys.PLACEHOLDER, () -> new Placeholder("count") {
 
             @Override
             public MultiLineComponent apply(PlaceholderContext ctx,
@@ -519,7 +522,7 @@ public class GTPlaceholders {
                 return true;
             }
         });
-        PlaceholderHandler.addPlaceholder(new Placeholder("data") {
+        REGISTRATE.generic("data", GTRegistries.Keys.PLACEHOLDER, () -> new Placeholder("data") {
 
             @Override
             public MultiLineComponent apply(PlaceholderContext ctx,
@@ -584,7 +587,7 @@ public class GTPlaceholders {
                 }
             }
         });
-        PlaceholderHandler.addPlaceholder(new Placeholder("combine") {
+        REGISTRATE.generic("combine", GTRegistries.Keys.PLACEHOLDER, () -> new Placeholder("combine") {
 
             @Override
             public MultiLineComponent apply(PlaceholderContext ctx, List<MultiLineComponent> args) {
@@ -601,7 +604,7 @@ public class GTPlaceholders {
                 return true;
             }
         });
-        PlaceholderHandler.addPlaceholder(new Placeholder("nbt") {
+        REGISTRATE.generic("nbt", GTRegistries.Keys.PLACEHOLDER, () -> new Placeholder("nbt") {
 
             @Override
             public MultiLineComponent apply(PlaceholderContext ctx,
@@ -619,7 +622,7 @@ public class GTPlaceholders {
                 return true;
             }
         });
-        PlaceholderHandler.addPlaceholder(new Placeholder("toChars") {
+        REGISTRATE.generic("toChars", GTRegistries.Keys.PLACEHOLDER, () -> new Placeholder("toChars") {
 
             @Override
             public MultiLineComponent apply(PlaceholderContext ctx,
@@ -637,7 +640,7 @@ public class GTPlaceholders {
                 return true;
             }
         });
-        PlaceholderHandler.addPlaceholder(new Placeholder("toAscii") {
+        REGISTRATE.generic("toAscii", GTRegistries.Keys.PLACEHOLDER, () -> new Placeholder("toAscii") {
 
             @Override
             public MultiLineComponent apply(PlaceholderContext ctx,
@@ -653,13 +656,13 @@ public class GTPlaceholders {
                 return true;
             }
         });
-        PlaceholderHandler.addPlaceholder(new Placeholder("fromAscii") {
+        REGISTRATE.generic("fromAscii", GTRegistries.Keys.PLACEHOLDER, () -> new Placeholder("fromAscii") {
 
             @Override
             public MultiLineComponent apply(PlaceholderContext ctx,
                                             List<MultiLineComponent> args) throws PlaceholderException {
                 PlaceholderUtils.checkArgs(args, 1);
-                return MultiLineComponent.literal((char) PlaceholderUtils.toInt(args.get(0))).setIgnoreSpaces(true);
+                return MultiLineComponent.literal((char) PlaceholderUtils.toInt(args.getFirst())).setIgnoreSpaces(true);
             }
 
             @Override
@@ -667,7 +670,7 @@ public class GTPlaceholders {
                 return true;
             }
         });
-        PlaceholderHandler.addPlaceholder(new Placeholder("subList") {
+        REGISTRATE.generic("subList", GTRegistries.Keys.PLACEHOLDER, () -> new Placeholder("subList") {
 
             @Override
             public MultiLineComponent apply(PlaceholderContext ctx,
@@ -689,7 +692,7 @@ public class GTPlaceholders {
                 return true;
             }
         });
-        PlaceholderHandler.addPlaceholder(new Placeholder("cmp") {
+        REGISTRATE.generic("cmp", GTRegistries.Keys.PLACEHOLDER, () -> new Placeholder("cmp") {
 
             @Override
             public MultiLineComponent apply(PlaceholderContext ctx,
@@ -714,7 +717,7 @@ public class GTPlaceholders {
             }
         });
 
-        PlaceholderHandler.addPlaceholder(new Placeholder("bf") {
+        REGISTRATE.generic("bf", GTRegistries.Keys.PLACEHOLDER, () -> new Placeholder("bf") {
 
             @Override
             public MultiLineComponent apply(PlaceholderContext ctx,
@@ -811,7 +814,7 @@ public class GTPlaceholders {
             }
         });
 
-        PlaceholderHandler.addPlaceholder(new Placeholder("cmd") {
+        REGISTRATE.generic("cmd", GTRegistries.Keys.PLACEHOLDER, () -> new Placeholder("cmd") {
 
             @Override
             public MultiLineComponent apply(PlaceholderContext ctx,
@@ -876,7 +879,7 @@ public class GTPlaceholders {
                 return output;
             }
         });
-        PlaceholderHandler.addPlaceholder(new Placeholder("tm") {
+        REGISTRATE.generic("tm", GTRegistries.Keys.PLACEHOLDER, () -> new Placeholder("tm") {
 
             @Override
             public MultiLineComponent apply(PlaceholderContext ctx, List<MultiLineComponent> args) {
@@ -888,7 +891,7 @@ public class GTPlaceholders {
                 return true;
             }
         });
-        PlaceholderHandler.addPlaceholder(new Placeholder("formatInt") {
+        REGISTRATE.generic("formatInt", GTRegistries.Keys.PLACEHOLDER, () -> new Placeholder("formatInt") {
 
             @Override
             public MultiLineComponent apply(PlaceholderContext ctx,
@@ -914,7 +917,7 @@ public class GTPlaceholders {
                 return true;
             }
         });
-        PlaceholderHandler.addPlaceholder(new Placeholder("click") {
+        REGISTRATE.generic("click", GTRegistries.Keys.PLACEHOLDER, () -> new Placeholder("click") {
 
             @Override
             public MultiLineComponent apply(PlaceholderContext ctx,
@@ -935,7 +938,7 @@ public class GTPlaceholders {
                 return true;
             }
         });
-        PlaceholderHandler.addPlaceholder(new Placeholder("ender") {
+        REGISTRATE.generic("ender", GTRegistries.Keys.PLACEHOLDER, () -> new Placeholder("ender") {
 
             @Override
             public MultiLineComponent apply(PlaceholderContext ctx,
@@ -1027,7 +1030,7 @@ public class GTPlaceholders {
                 }
             }
         });
-        PlaceholderHandler.addPlaceholder(new Placeholder("eval") {
+        REGISTRATE.generic("eval", GTRegistries.Keys.PLACEHOLDER, () -> new Placeholder("eval") {
 
             @Override
             public MultiLineComponent apply(PlaceholderContext ctx,
@@ -1041,7 +1044,7 @@ public class GTPlaceholders {
             }
         });
 
-        PlaceholderHandler.addPlaceholder(new Placeholder("module") {
+        REGISTRATE.generic("module", GTRegistries.Keys.PLACEHOLDER, () -> new Placeholder("module") {
 
             @Override
             public MultiLineComponent apply(PlaceholderContext ctx,
@@ -1064,7 +1067,7 @@ public class GTPlaceholders {
                         (CompoundTag) stack.save(ctx.level().registryAccess())));
             }
         });
-        PlaceholderHandler.addPlaceholder(new Placeholder("setImage") {
+        REGISTRATE.generic("setImage", GTRegistries.Keys.PLACEHOLDER, () -> new Placeholder("setImage") {
 
             @Override
             public MultiLineComponent apply(PlaceholderContext ctx,
@@ -1085,7 +1088,7 @@ public class GTPlaceholders {
                 return MultiLineComponent.empty();
             }
         });
-        PlaceholderHandler.addPlaceholder(new Placeholder("rect") {
+        REGISTRATE.generic("rect", GTRegistries.Keys.PLACEHOLDER, () -> new Placeholder("rect") {
 
             @Override
             public MultiLineComponent apply(PlaceholderContext ctx,
@@ -1109,7 +1112,7 @@ public class GTPlaceholders {
                         renderData));
             }
         });
-        PlaceholderHandler.addPlaceholder(new Placeholder("quad") {
+        REGISTRATE.generic("quad", GTRegistries.Keys.PLACEHOLDER, () -> new Placeholder("quad") {
 
             @Override
             public MultiLineComponent apply(PlaceholderContext ctx,
@@ -1143,7 +1146,7 @@ public class GTPlaceholders {
                         renderData));
             }
         });
-        PlaceholderHandler.addPlaceholder(new Placeholder("item") {
+        REGISTRATE.generic("item", GTRegistries.Keys.PLACEHOLDER, () -> new Placeholder("item") {
 
             @Override
             public MultiLineComponent apply(PlaceholderContext ctx,
@@ -1155,7 +1158,7 @@ public class GTPlaceholders {
                 return MultiLineComponent.literal(ctx.itemStackHandler().getStackInSlot(slot - 1).toString());
             }
         });
-        PlaceholderHandler.addPlaceholder(new Placeholder("blockNbt") {
+        REGISTRATE.generic("blockNbt", GTRegistries.Keys.PLACEHOLDER, () -> new Placeholder("blockNbt") {
 
             @Override
             public MultiLineComponent apply(PlaceholderContext ctx,
@@ -1179,7 +1182,7 @@ public class GTPlaceholders {
                 return tag == null ? MultiLineComponent.empty() : MultiLineComponent.literal(tag.toString());
             }
         });
-        PlaceholderHandler.addPlaceholder(new Placeholder("setTargetSlot") {
+        REGISTRATE.generic("setTargetSlot", GTRegistries.Keys.PLACEHOLDER, () -> new Placeholder("setTargetSlot") {
 
             @Override
             public MultiLineComponent apply(PlaceholderContext ctx,
@@ -1198,7 +1201,7 @@ public class GTPlaceholders {
                 return MultiLineComponent.empty();
             }
         });
-        PlaceholderHandler.addPlaceholder(new Placeholder("targetSlot") {
+        REGISTRATE.generic("targetSlot", GTRegistries.Keys.PLACEHOLDER, () -> new Placeholder("targetSlot") {
 
             @Override
             public MultiLineComponent apply(PlaceholderContext ctx,
